# MLOWLS_Deployment

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  data.dvc  data_2024.dvc  docker-compose.yml  models.dvc  pyproject.toml  requirements.txt  requirements_fastapi.txt  requirements_model.txt  supervisored.conf
.dvc/: config
configs/: ml_owls_config.yml
configs/fastapi/: ml_owls_config.yml
configs/model/: model_config.yaml
interfaces/model/: __init__.py  audio_processor.py  audo_segmenter.py  logger.py  metadata_handler.py  metric_calculator.py  model_converter.py  model_loader.py  model_saver.py  model_validator.py  predictor.py  spectrogram_generator.py  training_strategy.py
ml_owls/: auth.py  main.py  router.py
ml_owls/configs/: config.py
ml_owls/labelstudio/: labelstudio_integration.py
ml_owls/labelstudio_integration/: add_prediction.py  labelstudio_singleton.py
ml_owls/model/: config.py  dataset.py  mlflow_logger.py  onnx_model.py  train.py  trainer_factory.py
ml_owls/model/inference/: __init__.py  audio_processing_factory.py  conversion_pipeline.py  convert.py  inference_factory.py  json_metadata_handler.py  mel_spectrogram_generator.py  model_conversion_service.py  model_converter.py  ogg_audio_processor.py  onnx_converter.py  onnx_predictor.py  onnx_validator.py  overlap_segmenter.py  pipeline_singleton.py  predict.py  prediction_pipeline.py  trained_model_loader.py  training_transform_processor.py
ml_owls/model/metrics/: __init__.py  accuracy.py  aggregator.py  auc.py
ml_owls/model/persistence/: __init__.py  model_saver.py
ml_owls/model/training/: __init__.py  epoch_trainer.py  strategies.py  trainer.py
ml_owls/utils/: audio.py
notebooks/: eda.ipynb  label_studio_data_setup.ipynb
output/: best_model_metadata.json  final_model_metadata.json
utils/: id_to_common_name.py
utils/common/: id_to_common_name.py
utils/labelstudio_integration/: find_audio.py
utils/model/: utils.py
