[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlowls-training"
version = "0.1.0"
description = "Model training and deployment pipeline for BirdCLEF 2025"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dyuman Bulloni", email = "dyuman.bulloni@supsi.ch"},
    {name = "Carlo Grigioni", email = "carlo.grigioni@supsi.ch"},
    {name = "Christian Pala", email = "christian.pala@student.supsi.ch"},
    {name = "Manuel Ippolito", email = "manuel.ippolito@student.supsi.ch"},
]
keywords = ["machine-learning", "audio", "bird-classification", "weak-labels", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyyaml>=6.0",
    "requests>=2.32.3",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0,<1.4.0",
    "torch>=2.4.0,<3.0.0",
    "torchaudio>=2.4.0,<3.0.0",
    "timm>=0.9.0,<1.0.0",
    "rich>=12.0.0,<14.0.0",
    "dvc>=3.59.2",
    "dvc-ssh>=4.2.1",
    "mlflow>=2.8.0,<3.0.0",
    "label-studio>=1.18.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
viz = [
    "matplotlib>=3.6,<4.0",
    "seaborn>=0.12",
    "plotly>=5.0",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "notebook>=6.0",
]

inference = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "onnxruntime-gpu>=1.16.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]


[project.urls]
Homepage = "https://github.com/Manuel-Ippolito/MLOWLS_Deployment"
Repository = "https://github.com/Manuel-Ippolito/MLOWLS_Deployment"
Issues = "https://github.com/Manuel-Ippolito/MLOWLS_Deployment/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_owls*"]

[tool.setuptools.package-dir]
"" = "."

# Black code formatting
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# mypy type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
